--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <h1>Welcome to My Portfolio</h1>
+        <div class="image-grid">
+            <a href="seminarie.html" class="image-container">
+                <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Seminarie">
+                <div class="image-text">Seminarie</div>
+            </a>
+            <a href="innovatie.html" class="image-container">
+                <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Innovatie">
+                <div class="image-text">Innovatie</div>
+            </a>
+            <a href="persoonlijke-ontwikkeling.html" class="image-container">
+                <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Persoonlijke ontwikkeling">
+                <div class="image-text">Persoonlijke ontwikkeling</div>
+            </a>
+            <a href="internationalisering.html" class="image-container">
+                <img src="https://images.unsplash.com/photo-1507608616759-54f48f0af0ee?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Internationalisering">
+                <div class="image-text">Internationalisering</div>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
