seminarie in orde maken

--- a/seminarie.html
+++ b/seminarie.html
@@ -10,7 +10,127 @@
     <div class="container">
         <h1>Seminarie</h1>
         <div class="content">
-            <p>Hier komt de inhoud van het seminarie.</p>
+            <table class="seminar-table">
+                <thead>
+                    <tr>
+                        <th>Afbeelding</th>
+                        <th>Naam</th>
+                        <th>Datum en tijd</th>
+                        <th class="company-location-header">
+                            <div class="header-content">
+                                <span>Bedrijf(spreker(s))</span>
+                                <span>Plaats</span>
+                            </div>
+                        </th>
+                        <th>Informatie</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><img src="https://easi.net/sites/default/files/2021-10/2.png" alt="EASI Seminar"></td>
+                        <td>Easi: Microsoft Cloud: Azure & Intone</td>
+                        <td>12 maart 2024<br>08:30 - 11:00</td>
+                        <td class="company-location-cell">
+                            <div class="company">Easi (Jarne Creten)</div>
+                            <div class="location">Digital PXL - G410<br>
+                                Elfde Liniestraat 24 Gebouw G<br>
+                                Hasselt, 3500<br>
+                                België</div>
+                        </td>
+                        <td>een introductie gekregen over de mogelijkheden van Microsoft Cloud: Azure & Intune</td>
+                    </tr>
+                    <tr>
+                        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQpYNSHHdCildJ_22RjlysZocheL1BuuR0cA&s" alt="Toreon Seminar"></td>
+                        <td>Toreon: Ethical hacking</td>
+                        <td>19 maart 2024<br>08:30 - 12:30</td>
+                        <td class="company-location-cell">
+                            <div class="company">Toreon (Robbe van Roey)</div>
+                            <div class="location">Digital PXL - G410<br>
+                                Elfde Liniestraat 24 Gebouw G<br>
+                                Hasselt, 3500<br>
+                                België</div>
+                        </td>
+                        <td>In deze workshop hebben we de rol gekregen van een penetration tester. We kregen enekele challenges om optelossen om daarna in de code te gaan kijken naar waar de fout zit.</td>
+                    </tr>
+                    <tr>
+                        <td><img src="https://media.licdn.com/dms/image/v2/C4E0BAQEdgiTJWjD9dA/company-logo_200_200/company-logo_200_200/0/1653387335116/gluobe_logo?e=2147483647&v=beta&t=nPTsDeeecv5Su9R3BuClQNLjUoOdZjANY50nu6enmYM" alt="Gluo Seminar"></td>
+                        <td>Gluo: Multicloud workshop</td>
+                        <td>23 april 2024<br>9:00 - 12:00</td>
+                        <td class="company-location-cell">
+                            <div class="company">Gluo (Joris Jamers en Robin Milissen)</div>
+                            <div class="location">Digital PXL – G410<br>
+                                Elfde Liniestraat 24 Gebouw G<br>
+                                Hasselt, 3500<br>
+                                België</div>
+                        </td>
+                        <td>Opzetten van een containerized applicatie en het stapsgewijs automatiseren van de infrastructuurdeployment via verschillende cloudproviders en tools, eindigend in een volledig geautomatiseerde multi-cloud pipeline.</td>
+                    </tr>
+                    <tr>
+                        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4_eKulcPmenP_Fgo-16AEockJlRoczPQEcg&s" alt="Politie Seminar"></td>
+                        <td>Politie: Digitaal onderzoek: forensics, cybercrime, crypto-assets en data-analyse</td>
+                        <td>7 mei 2024<br>10:00 - 12:00</td>
+                        <td class="company-location-cell">
+                            <div class="company"> FGP Lim (Alexander Bijnens en Manuel Schaeken)</div>
+                            <div class="location">Digital PXL – G414<br>
+                                Elfde Liniestraat 24 Gebouw G<br>
+                                Hasselt, 3500<br>
+                                België</div>
+                        </td>
+                        <td>Presentatie over de taakinhoud van de RCCU binnen de federale politie en de technologische, juridische en operationele uitdagingen bij de bestrijding van cybercriminaliteit en het veiligstellen van digitaal bewijs.</td>
+                    </tr>
+                    <tr>
+                        <td><img src="https://www.bloovi.be/frontend/files/profiles/avatars/source/4795_ibm-belgium.png" alt="IBM Seminar"></td>
+                        <td>IBM: Discover the meeting point of GenAI, Prompt Engineering and Quantum Computing</td>
+                        <td>06 November 2024<br>13:15 - 16:00</td>
+                        <td class="company-location-cell">
+                            <div class="company">IBM (Eric Michiels)</div>
+                            <div class="location">Corda 7 - iClassroom 1 (CC712)<br>
+                                Kempische Steenweg 311 Corda 7<br>
+                                Hasselt, 3500<br>
+                                België</div>
+                        </td>
+                        <td>Tijdens deze seminarie hebben we ontdekt wat de boeiende synergie tussen Generatieve AI en Quantum Computing, met toepassingen zoals slimme prompt engineering, AI-ondersteunde transpilers, codegeneratie via Qiskit Assistant en Quantum Machine Learning voor LLM’s.</td>
+                    </tr>
+                    <tr>
+                        <td><img src="https://media.licdn.com/dms/image/v2/C4E0BAQEdgiTJWjD9dA/company-logo_200_200/company-logo_200_200/0/1653387335116/gluobe_logo?e=2147483647&v=beta&t=nPTsDeeecv5Su9R3BuClQNLjUoOdZjANY50nu6enmYM" alt="Gluo Seminar"></td>
+                        <td>Gluo: DevSecOps Workshop</td>
+                        <td>13 november 2024<br>13:30 - 17:30</td>
+                        <td class="company-location-cell">
+                            <div class="company">Gluo (Joris Jamers en Ward Van den Broeck)</div>
+                            <div class="location">Corda 7 - iClassroom 2 (CC713)<br>
+                                Kempische Steenweg 311 Corda 7<br>
+                                Hasselt, 3500<br>
+                                België</div>
+                        </td>
+                        <td>In deze workshop leerden we hoe je op een veilige manier software ontwikkelt en uitrolt in de cloud volgens het DevSecOps-principe, met behulp van tools zoals Trivy, Gatekeeper, Nikto en Terraform om kwetsbaarheden vroegtijdig op te sporen en aan te pakken.</td>
+                    </tr>
+                    <tr>
+                        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQo9UxfhwYYUi2e30Thk3UDzKK8x2rcotXIQ&s" alt="Cegeka Seminar"></td>
+                        <td>Cegeka: Bedrijfsbezoek en datacenter</td>
+                        <td>20 november 2024<br>14:15 - 16:15</td>
+                        <td class="company-location-cell">
+                            <div class="company">Cegeka</div>
+                            <div class="location">Universiteitslaan 9<br>
+                                Hasselt, 3500<br>
+                                België</div>
+                        </td>
+                        <td>De rondleiding is begonnen met het verhaal van Cegeka daarna presentatie gehad van het datacenter en tenslotte hebben we het datacenter mogen bezoeken.</td>
+                    </tr>
+                    <tr>
+                        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4_eKulcPmenP_Fgo-16AEockJlRoczPQEcg&s" alt="Politie Seminar"></td>
+                        <td>Politie: Intro into Digital Forensics</td>
+                        <td>4 december 2024<br>13:30 - 17:00</td>
+                        <td class="company-location-cell">
+                            <div class="company">RCCU (Alexander Bijnens en Arne Vanmechelen)</div>
+                            <div class="location">Corda 7 - iClassroom 3 (CC71)<br>
+                                Kempische Steenweg 311 Corda 7<br>
+                                Hasselt, 3500<br>
+                                België</div>
+                        </td>
+                        <td>Tijdens deze forensische workshop leerden we met behulp van Sleuthkit en Linux-commandline tools hoe je op low-level wijze digitale sporen onderzoekt, bestanden recupereert en gewiste data opspoort, met als doel een forensische case op te lossen.</td>
+                    </tr>
+                </tbody>
+            </table>
             <a href="index.html" class="back-button">Terug naar Home</a>
         </div>
     </div>
