innovatie html afgemaakt

--- a/innovatie.html
+++ b/innovatie.html
@@ -5,14 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Innovatie - My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="innovatie.css">
 </head>
 <body>
     <div class="container">
         <h1>Innovatie</h1>
-        <div class="content">
-            <p>Hier komt de inhoud van de innovatie.</p>
-            <a href="index.html" class="back-button">Terug naar Home</a>
+        
+        <div class="event-section">
+            <div class="event-header">
+                <div class="event-icon">💻</div>
+                <h2 class="event-title">Innovatieroute Cloud & Security</h2>
+            </div>
+            <div class="event-content">
+                <p class="event-description">
+                    Een sessie over het ontleden van cyberaanvallen met focus op APT, ransomware, crisisbeheer en incident response. 
+                    Een workshop rond threat hunting en response binnen AWS-omgevingen. 
+                    Een hands-on workshop over Secure SD-WANs met topics zoals SDN, traffic shaping, FortiManager, SD-WAN templates en FortiGate-configuratie.
+                </p>
+                <div class="event-details">
+                    <div class="detail-group">
+                        <div class="detail-title">Bedrijf & Locaties</div>
+                        <div class="detail-content">
+                            Resilix – Corda 1 (voormiddag) & Corda 7 – CC713 (namiddag)<br>
+                            Cloudar – Corda 7 – CC711<br>
+                            Exclusive Networks – Corda 7 – CC713
+                        </div>
+                    </div>
+                    <div class="detail-group">
+                        <div class="detail-title">Datum & tijd</div>
+                        <div class="detail-content">
+                            24 september 2024 – 09:00 tot 17:00<br>
+                            8 oktober 2024 – 09:00 tot 16:00<br>
+                            15 oktober 2024 – 09:00 tot 16:00
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <div class="event-section">
+            <div class="event-header">
+                <div class="event-icon">🚀</div>
+                <h2 class="event-title">Hackaton: Hack The Future – Among The Stars</h2>
+            </div>
+            <div class="event-content">
+                <p class="event-description">
+                    Tijdens de hackathon waren we in teams verdeelt voor aan IT-challenges te werken. 
+                    Het was een dag vol coderen, creatief nadenken. Op het einden moesten we dan onze challenges 
+                    die we gedaan/geprobeerd hadden presenteren aan de mentoren en de andere groepen.
+                </p>
+                <div class="event-details">
+                    <div class="detail-group">
+                        <div class="detail-title">Organisatie & Locatie</div>
+                        <div class="detail-content">Hack The Future -<br>
+                            Flanders Meeting And Convention Center Antwerpen<br>
+                            Antwerpen, 2018<br>
+                            België
+                        </div>
+                    </div>
+                    <div class="detail-group">
+                        <div class="detail-title">Datum</div>
+                        <div class="detail-content">19 November 2024 - 08:30 tot 17:30</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <a href="index.html" class="back-button">Terug naar Home</a>
     </div>
 </body>
 </html> 
