persoonlijke-ontwikkeling html afgemaakt

--- a/persoonlijke-ontwikkeling.html
+++ b/persoonlijke-ontwikkeling.html
@@ -5,14 +5,157 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persoonlijke ontwikkeling - My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="persoonlijke-ontwikkeling.css">
 </head>
 <body>
     <div class="container">
         <h1>Persoonlijke ontwikkeling</h1>
-        <div class="content">
-            <p>Hier komt de inhoud van de persoonlijke ontwikkeling.</p>
-            <a href="index.html" class="back-button">Terug naar Home</a>
+        
+        <div class="event-section">
+            <div class="event-header">
+                <h2 class="event-title">Projectweek 2TIN</h2>
+            </div>
+            <div class="event-content">
+                <div class="event-description">
+                    De projectweek bestond uit diverse workshops, lezingen en groepsopdrachten gericht op zowel persoonlijke als professionele ontwikkeling. 
+                    Er werd aandacht besteed aan thema's zoals samenwerking, communicatie, academisch schrijven en internationalisering. 
+                    De week bood deelnemers de kans om inzicht te krijgen in het belang van soft skills, netwerken en een goede voorbereiding op toekomstige projecten of stages.
+                </div>
+                <div class="event-details">
+                    <div class="detail-group">
+                        <div class="detail-title">Locaties</div>
+                        <div class="detail-content">
+                            <div class="location-info">
+                                <strong>Digital PXL</strong><br>
+                                B345, B123, B102, B122, B124<br>
+                                Elfde Liniestraat 26 Gebouw B<br>
+                                Hasselt, 3500<br>
+                                België
+                            </div>
+                            <div class="location-info">
+                                <strong>Corda 7 - iClassroom</strong><br>
+                                Kempische Steenweg 311<br>
+                                Hasselt, 3500<br>
+                                België
+                            </div>
+                        </div>
+                    </div>
+                    <div class="detail-group">
+                        <div class="detail-title">Periode</div>
+                        <div class="detail-content">
+                            <div class="date-time">
+                                <div class="date">12 Februari 2024 – 16 Februari 2024</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <div class="event-section">
+            <div class="event-header">
+                <h2 class="event-title">POP-sessie 2TIN: Brein aan het werk!</h2>
+            </div>
+            <div class="event-content">
+                <div class="event-description">
+                    Deze Sessie toont hoe digitale afleiding, zoals smartphones en multitasken, onze focus en breinrust verstoren. Ze geeft tips om bewuster om te gaan met technologie, zoals notificaties uitschakelen, monotasken en regelmatig offline gaan.
+                </div>
+                <div class="event-details">
+                    <div class="detail-group">
+                        <div class="detail-title">Bedrijf & Locatie</div>
+                        <div class="detail-content">
+                            <div class="location-info">
+                                <strong>PXL</strong><br>
+                                Digital PXL – B302<br>
+                                Elfde Liniestraat 26 Gebouw B<br>
+                                Hasselt, 3500<br>
+                                België
+                            </div>
+                        </div>
+                    </div>
+                    <div class="detail-group">
+                        <div class="detail-title">Datum & Tijd</div>
+                        <div class="detail-content">
+                            <div class="date-time">
+                                <div class="date">27 Februari 2024</div>
+                                <div class="time">10:30 - 12:30</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="event-section">
+            <div class="event-header">
+                <h2 class="event-title">POP-sessie 2TIN: POPping</h2>
+            </div>
+            <div class="event-content">
+                <div class="event-description">
+                    Deze sessie ging over persoonlijke ontwikkeling, samenwerken en zelfinzicht. 
+                    We leerden op een interactieve manier omgaan met stress, feedback geven en verwerken en effectiever samenwerken in groep.
+                </div>
+                <div class="event-details">
+                    <div class="detail-group">
+                        <div class="detail-title">Bedrijf & Locatie</div>
+                        <div class="detail-content">
+                            <div class="location-info">
+                                <strong>PXL</strong><br>
+                                Digital PXL – B301<br>
+                                Elfde Liniestraat 26 Gebouw B<br>
+                                Hasselt, 3500<br>
+                                België
+                            </div>
+                        </div>
+                    </div>
+                    <div class="detail-group">
+                        <div class="detail-title">Datum & Tijd</div>
+                        <div class="detail-content">
+                            <div class="date-time">
+                                <div class="date">27 Februari 2024</div>
+                                <div class="time">8:30 - 10:30</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="event-section">
+            <div class="event-header">
+                <h2 class="event-title">POP-sessie 3TIN: My Team and I</h2>
+            </div>
+            <div class="event-content">
+                <div class="event-description">
+                    In deze sessie ontdekten we wat een team sterk maakt en hoe je beter samenwerkt door open communicatie, vertrouwen, duidelijke afspraken, conflicten niet te vermijden en gezamenlijke doelen na te streven volgens het model van Lencioni.
+                </div>
+                <div class="event-details">
+                    <div class="detail-group">
+                        <div class="detail-title">Bedrijf(sprekers) & Locatie</div>
+                        <div class="detail-content">
+                            <div class="location-info">
+                                <strong>Learning Path (Jo en Carl)</strong><br>
+                                Digital PXL - PXL iSpace<br>
+                                Kempische Steenweg 299<br>
+                                Hasselt, 3500<br>
+                                België
+                            </div>
+                        </div>
+                    </div>
+                    <div class="detail-group">
+                        <div class="detail-title">Datum & Tijd</div>
+                        <div class="detail-content">
+                            <div class="date-time">
+                                <div class="date">9 September 2024</div>
+                                <div class="time">13:30 – 15:30</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <a href="index.html" class="back-button">Terug naar Home</a>
     </div>
 </body>
 </html> 
