wat verder gewerkt

--- a/internationalisering.html
+++ b/internationalisering.html
@@ -5,14 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internationalisering - My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="internationalisering.css">
 </head>
 <body>
     <div class="container">
         <h1>Internationalisering</h1>
-        <div class="content">
-            <p>Hier komt de inhoud van de internationalisering.</p>
-            <a href="index.html" class="back-button">Terug naar Home</a>
+        
+        <div class="trip-card">
+            <div class="trip-header">
+                <h2>Studentenreis Linz</h2>
+                <div class="trip-period">19 - 23 Maart 2025</div>
+            </div>
+            
+            <div class="trip-content">
+                <div class="trip-description">
+                    <p>Een studiereis naar Oostenrijk met een mix van cultuur en technologie. We verkenden Linz, Salzburg en Hagenburg, bezochten het Ars Electronica Center, volgden workshops in Hagenberg en leerden alles over studeren in het buitenland.</p>
+                </div>
+
+                <div class="locations-section">
+                    <h3>Bezochte Locaties</h3>
+                    <div class="location-cards">
+                        <div class="location-card">
+                            <h4>Ars-Electronica</h4>
+                            <div class="address">
+                                4040 Linz<br>
+                                Oostenrijk
+                            </div>
+                        </div>
+                        <div class="location-card">
+                            <h4>University of Applied Sciences Upper Austria</h4>
+                            <div class="address">
+                                Softwarepark 11<br>
+                                4232 Hagenberg<br>
+                                Oostenrijk
+                            </div>
+                        </div>
+                        <div class="location-card">
+                            <h4>Salzburg</h4>
+                            <div class="address">
+                                Oostenrijk
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <a href="index.html" class="back-button">Terug naar Home</a>
     </div>
 </body>
 </html> 
