--- a/persoonlijke-ontwikkeling.html
+++ b/persoonlijke-ontwikkeling.html
@@ -58,7 +58,7 @@
             </div>
             <div class="event-content">
                 <div class="event-description">
-                    Deze Sessie toont hoe digitale afleiding, zoals smartphones en multitasken, onze focus en breinrust verstoren. Ze geeft tips om bewuster om te gaan met technologie, zoals notificaties uitschakelen, monotasken en regelmatig offline gaan.
+                    Deze sessie toont hoe digitale afleiding, zoals smartphones en multitasken, onze focus en breinrust verstoren. Ze geeft tips om bewuster om te gaan met technologie, zoals notificaties uitschakelen, monotasken en regelmatig offline gaan.
                 </div>
                 <div class="event-details">
                     <div class="detail-group">
