wat style aangepast

--- a/persoonlijke-ontwikkeling.html
+++ b/persoonlijke-ontwikkeling.html
@@ -21,7 +21,7 @@
                     Er werd aandacht besteed aan thema's zoals samenwerking, communicatie, academisch schrijven en internationalisering. 
                     De week bood deelnemers de kans om inzicht te krijgen in het belang van soft skills, netwerken en een goede voorbereiding op toekomstige projecten of stages.
                 </div>
-                <div class="event-details">
+                <div class="event-details info-row">
                     <div class="detail-group">
                         <div class="detail-title">Locaties</div>
                         <div class="detail-content">
@@ -60,7 +60,7 @@
                 <div class="event-description">
                     Deze sessie toont hoe digitale afleiding, zoals smartphones en multitasken, onze focus en breinrust verstoren. Ze geeft tips om bewuster om te gaan met technologie, zoals notificaties uitschakelen, monotasken en regelmatig offline gaan.
                 </div>
-                <div class="event-details">
+                <div class="event-details info-row">
                     <div class="detail-group">
                         <div class="detail-title">Bedrijf & Locatie</div>
                         <div class="detail-content">
@@ -95,7 +95,7 @@
                     Deze sessie ging over persoonlijke ontwikkeling, samenwerken en zelfinzicht. 
                     We leerden op een interactieve manier omgaan met stress, feedback geven en verwerken en effectiever samenwerken in groep.
                 </div>
-                <div class="event-details">
+                <div class="event-details info-row">
                     <div class="detail-group">
                         <div class="detail-title">Bedrijf & Locatie</div>
                         <div class="detail-content">
@@ -129,7 +129,7 @@
                 <div class="event-description">
                     In deze sessie ontdekten we wat een team sterk maakt en hoe je beter samenwerkt door open communicatie, vertrouwen, duidelijke afspraken, conflicten niet te vermijden en gezamenlijke doelen na te streven volgens het model van Lencioni.
                 </div>
-                <div class="event-details">
+                <div class="event-details info-row">
                     <div class="detail-group">
                         <div class="detail-title">Bedrijf(sprekers) & Locatie</div>
                         <div class="detail-content">
