style meer gefixt

--- a/seminarie.html
+++ b/seminarie.html
@@ -18,7 +18,8 @@
                         <th>Datum en tijd</th>
                         <th class="company-location-header">
                             <div class="header-content">
-                                <span>Bedrijf(spreker(s))</span>
+                                <span>Bedrijf<br>
+                                    (spreker(s))</span>
                                 <span>Plaats</span>
                             </div>
                         </th>
@@ -31,7 +32,8 @@
                         <td>Easi: Microsoft Cloud: Azure & Intone</td>
                         <td>12 maart 2024<br>08:30 - 11:00</td>
                         <td class="company-location-cell">
-                            <div class="company">Easi (Jarne Creten)</div>
+                            <div class="company">Easi<br>
+                                (Jarne Creten)</div>
                             <div class="location">Digital PXL - G410<br>
                                 Elfde Liniestraat 24 Gebouw G<br>
                                 Hasselt, 3500<br>
@@ -44,7 +46,8 @@
                         <td>Toreon: Ethical hacking</td>
                         <td>19 maart 2024<br>08:30 - 12:30</td>
                         <td class="company-location-cell">
-                            <div class="company">Toreon (Robbe van Roey)</div>
+                            <div class="company">Toreon<br>
+                                (Robbe van Roey)</div>
                             <div class="location">Digital PXL - G410<br>
                                 Elfde Liniestraat 24 Gebouw G<br>
                                 Hasselt, 3500<br>
@@ -57,7 +60,8 @@
                         <td>Gluo: Multicloud workshop</td>
                         <td>23 april 2024<br>9:00 - 12:00</td>
                         <td class="company-location-cell">
-                            <div class="company">Gluo (Joris Jamers en Robin Milissen)</div>
+                            <div class="company">Gluo<br>
+                                (Joris Jamers en Robin Milissen)</div>
                             <div class="location">Digital PXL – G410<br>
                                 Elfde Liniestraat 24 Gebouw G<br>
                                 Hasselt, 3500<br>
@@ -70,7 +74,8 @@
                         <td>Politie: Digitaal onderzoek: forensics, cybercrime, crypto-assets en data-analyse</td>
                         <td>7 mei 2024<br>10:00 - 12:00</td>
                         <td class="company-location-cell">
-                            <div class="company"> FGP Lim (Alexander Bijnens en Manuel Schaeken)</div>
+                            <div class="company"> FGP Lim<br>
+                                (Alexander Bijnens en Manuel Schaeken)</div>
                             <div class="location">Digital PXL – G414<br>
                                 Elfde Liniestraat 24 Gebouw G<br>
                                 Hasselt, 3500<br>
@@ -83,20 +88,22 @@
                         <td>IBM: Discover the meeting point of GenAI, Prompt Engineering and Quantum Computing</td>
                         <td>06 November 2024<br>13:15 - 16:00</td>
                         <td class="company-location-cell">
-                            <div class="company">IBM (Eric Michiels)</div>
+                            <div class="company">IBM<br>
+                                (Eric Michiels)</div>
                             <div class="location">Corda 7 - iClassroom 1 (CC712)<br>
                                 Kempische Steenweg 311 Corda 7<br>
                                 Hasselt, 3500<br>
                                 België</div>
                         </td>
-                        <td>Tijdens deze seminarie hebben we ontdekt wat de boeiende synergie tussen Generatieve AI en Quantum Computing, met toepassingen zoals slimme prompt engineering, AI-ondersteunde transpilers, codegeneratie via Qiskit Assistant en Quantum Machine Learning voor LLM’s.</td>
+                        <td>Tijdens deze seminarie hebben we ontdekt wat de boeiende synergie tussen Generatieve AI en Quantum Computing, met toepassingen zoals slimme prompt engineering, AI-ondersteunde transpilers, codegeneratie via Qiskit Assistant en Quantum Machine Learning voor LLM's.</td>
                     </tr>
                     <tr>
                         <td><img src="https://media.licdn.com/dms/image/v2/C4E0BAQEdgiTJWjD9dA/company-logo_200_200/company-logo_200_200/0/1653387335116/gluobe_logo?e=2147483647&v=beta&t=nPTsDeeecv5Su9R3BuClQNLjUoOdZjANY50nu6enmYM" alt="Gluo Seminar"></td>
                         <td>Gluo: DevSecOps Workshop</td>
                         <td>13 november 2024<br>13:30 - 17:30</td>
                         <td class="company-location-cell">
-                            <div class="company">Gluo (Joris Jamers en Ward Van den Broeck)</div>
+                            <div class="company">Gluo<br>
+                                (Joris Jamers en Ward Van den Broeck)</div>
                             <div class="location">Corda 7 - iClassroom 2 (CC713)<br>
                                 Kempische Steenweg 311 Corda 7<br>
                                 Hasselt, 3500<br>
@@ -121,7 +128,8 @@
                         <td>Politie: Intro into Digital Forensics</td>
                         <td>4 december 2024<br>13:30 - 17:00</td>
                         <td class="company-location-cell">
-                            <div class="company">RCCU (Alexander Bijnens en Arne Vanmechelen)</div>
+                            <div class="company">RCCU<br>
+                                (Alexander Bijnens en Arne Vanmechelen)</div>
                             <div class="location">Corda 7 - iClassroom 3 (CC71)<br>
                                 Kempische Steenweg 311 Corda 7<br>
                                 Hasselt, 3500<br>
